0.1502
  update document
  moved host attribute to DBIx::Custom::MySQL
  moved port attribute to DBIx::Custom::MySQL
  moved database attribute to DBIx::Custom::MySQL and DBIx::Custom::SQLite
  
0.1501
  removed register_format()
  removed formats()
  removed run_transaction()
  removed create_table()
  removed drop_table()
  changed select() arguments
  changed insert() arguments
  changed update() arguments
  changed update_all() arguments
  changed delete() arguments
  changed delete_all() arguments
  changed execute() arguments
0.1402
  remove finish(), error()
  can receive code ref to filter()
  renamed resist to register
0.1401
  renamed fetch_rows to fetch_multi
  renamed fetch_hash_rows to fetch_hash_multi
0.1301
  Changed many(not backword compatible)
0.1201
  Changed many(not backword compatible)
0.1101
  rename DBIx::Custom::SQLite last_insert_id to last_insert_rowid
0.1001
  remove run_transaction().
  add transaction() and DBIx::Custom::Transaction
  rename fetch_first to fetch_single
  rename fetch_hash_first to fetch_hash_single
0.0906
  fix some bug
0.0905
  catch up with Object::Simple update
0.0904
  cleanup
0.0903
  catch up with Object::Simple update
0.0902
  cleanup
0.0901
  DBIx::Basic filter 'encode_utf8' utf8::upgrade process is deleted
0.0801
  add 'create_table', 'drop_table' methods
0.0701
  rename sql_template to sql_tmpl (not backword compatible)
  rename dbi_options to options (not backword compatible)
0.0605
  fix encode_utf8 filter
0.0604
  fix timeformat tests
0.0603
  fix cache system bug
0.0602
  update document
0.0601
  bind_filter argument is changed to ($value, $key, $dbi, $infos) (not backword compatible)
  fetch_filter argument is changed to ($value, $key, $dbi, $infos) (not backword compatible)
  run_transaction argument is changed to ($dbi)
0.0502
  update document
0.0501
  packaging DBIx::Custom::Result DBIx::Custom::Query DBIx::Custom::MySQL DBIx::Custom::SQLite DBIx::Custom::SQL::Template 
0.0401